# openapi.json
@@ -45,6 +45,10 @@
                         "format": "email",
                         "example": "john@example.com"
                       },
+                      "role": {
+                        "type": "string",
+                        "example": "user"
+                      },
                       "createdAt": {
                         "type": "string",
                         "example": "2024-01-01T00:00:00Z"
@@ -79,6 +83,10 @@
                     "type": "string",
                     "format": "email",
                     "example": "john@example.com"
+                  },
+                  "role": {
+                    "type": "string",
+                    "example": "user"
                   }
                 },
                 "required": [
@@ -109,6 +117,10 @@
                       "type": "string",
                       "format": "email",
                       "example": "john@example.com"
+                    },
+                    "role": {
+                      "type": "string",
+                      "example": "user"
                     },
                     "createdAt": {
                       "type": "string",
@@ -166,6 +178,10 @@
                       "format": "email",
                       "example": "john@example.com"
                     },
+                    "role": {
+                      "type": "string",
+                      "example": "user"
+                    },
                     "createdAt": {
                       "type": "string",
                       "example": "2024-01-01T00:00:00Z"
@@ -214,6 +230,10 @@
                     "type": "string",
                     "format": "email",
                     "example": "john@example.com"
+                  },
+                  "role": {
+                    "type": "string",
+                    "example": "user"
                   }
                 }
               }
@@ -240,6 +260,10 @@
                       "type": "string",
                       "format": "email",
                       "example": "john@example.com"
+                    },
+                    "role": {
+                      "type": "string",
+                      "example": "user"
                     },
                     "createdAt": {
                       "type": "string",
